--- a/index.html
+++ b/index.html
@@ -42,13 +42,13 @@
           <h3>前端</h3>
           <p>
             HTML / CSS <br>
-            JavaScript ( ES6 / AJAX / API )<br>
+            JavaScript ( jQuery / ES6 / AJAX / API )<br>
           </p>
         </div>
         <div class="skills">
           <h3>後端</h3>
           <p>
-            暫無
+            T-SQL
           </p>
         </div>
         <div class="skills">
