--- a/index.html
+++ b/index.html
@@ -48,7 +48,8 @@
         <div class="skills">
           <h3>後端</h3>
           <p>
-            T-SQL
+            C#<br>
+            MSSQL
           </p>
         </div>
         <div class="skills">
