--- a/index.html
+++ b/index.html
@@ -90,22 +90,25 @@
         <h2>經歷</h2>
         <h3>雅客計程車客運/儲備幹部(2019/05～2020/02)</h3>
         <p>
-        電話客服派車及客訴處理<br>
-        相關行政作業<br>
-        主管臨時交辦事項<br>
+        1.電話客服派車及客訴處理<br>
+        2.相關行政作業<br>
+        3.主管臨時交辦事項<br>
         </p>
         <h3>中興大學校務發展中心/專任助理(2018/06～2019/04)</h3>
         <p>
-        管理SQL Server、Qlik Sense Enterprise<br>
-        資料蒐集及前處理<br>
-        統計分析(網路聲量、畢業生流向及薪資分布)<br>
-        相關業務規劃與執行<br>
+        1.管理SQL Server、Qlik Sense Enterprise<br>
+        2.資料蒐集及前處理<br>
+        3.統計分析(網路聲量、畢業生流向及薪資分布)<br>
+        4.相關業務規劃與執行<br>
         </p>
       </div>
       <div class="clearfix"></div>
       <div class="work">
         <h2>作品集</h2>
-        <p>近期更新</p>
+        <a href="https://whiteroom4.github.io/Responsive-Resume/" target="_blank">1.響應式履歷(本作品)</a><br>
+        <a href="https://whiteroom4.github.io/Wish-List/" target="_blank">2.運用localStorage製作願望清單</a><br>
+        <a href="https://whiteroom4.github.io/Kaohsiung-Travel-Website-1/" target="_blank">3.使用AJAX/JSONP取得JSON data製作旅遊資訊網</a><br>
+        <a href="https://whiteroom4.github.io/Practice-AJAX-Post/" target="_blank">4.AJAX post JSON data to Web API 簡易帳號註冊及登入頁面</a>
       </div>
       <div class="autobiography">
         <h2>自傳</h2>
