--- a/index.html
+++ b/index.html
@@ -109,7 +109,8 @@
         <a href="https://whiteroom4.github.io/Wish-List/" target="_blank">2.運用localStorage製作願望清單</a><br>
         <a href="https://whiteroom4.github.io/Kaohsiung-Travel-Website-1/" target="_blank">3.使用AJAX/JSONP取得JSON data製作旅遊資訊網</a><br>
         <a href="https://whiteroom4.github.io/Practice-AJAX-Post/" target="_blank">4.AJAX post JSON data to Web API 簡易帳號註冊及登入頁面</a><br>
-        <a href="https://whiteroom4.github.io/Vue.js-Example-TodoList/" target="_blank">5.用VueJS製作ToDoList</a><br>
+        <a href="https://whiteroom4.github.io/Vue.js-Example-TodoList/" target="_blank">5.用Vue.js製作ToDoList</a><br>
+        <a href="https://whiteroom4.github.io/Video.js-YouTubeVideo/" target="_blank">6.用Video.js播放YouTube影片</a><br>
       </div>
       <div class="autobiography">
         <h2>自傳</h2>
