--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>響應式履歷</title>
   <link rel="stylesheet" href="css/style.css">
-  <link rel="stylesheet" href="https://unpkg.com/swiper/css/swiper.min.css">
+  <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css">
 </head>
 <body>
   <div class="wrap">
@@ -105,12 +105,12 @@
       <div class="clearfix"></div>
       <div class="work">
         <h2>作品集</h2>
-        <a href="https://whiteroom4.github.io/Responsive-Resume/" target="_blank">1.響應式履歷(本作品)</a><br>
-        <a href="https://whiteroom4.github.io/Wish-List/" target="_blank">2.運用localStorage製作願望清單</a><br>
-        <a href="https://whiteroom4.github.io/Kaohsiung-Travel-Website-1/" target="_blank">3.使用AJAX/JSONP取得JSON data製作旅遊資訊網</a><br>
-        <a href="https://whiteroom4.github.io/Practice-AJAX-Post/" target="_blank">4.AJAX post JSON data to Web API 簡易帳號註冊及登入頁面</a><br>
-        <a href="https://whiteroom4.github.io/Vue.js-Example-TodoList/" target="_blank">5.用Vue.js製作ToDoList</a><br>
-        <a href="https://whiteroom4.github.io/Video.js-YouTubeVideo/" target="_blank">6.用Video.js播放YouTube影片</a><br>
+        <a href="https://whiteroom4.github.io/Responsive-Resume/" target="_blank">1. 使用 HTML、CSS、jQuery、RWD 製作響應式履歷</a><br>
+        <a href="https://whiteroom4.github.io/Wish-List/" target="_blank">2. 使用 JavaScript 搭配 localStorage 製作願望清單</a><br>
+        <a href="https://whiteroom4.github.io/Kaohsiung-Travel-Website-1/" target="_blank">3. 使用 AJAX / JSONP 串接公開平台資料，並以頁面顯示相關資訊</a><br>
+        <a href="https://whiteroom4.github.io/Practice-AJAX-Post/" target="_blank">4. 進行資料檢核： AJAX post JSON data to Web API 簡易帳號註冊及登入頁面</a><br>
+        <a href="https://whiteroom4.github.io/Video.js-YouTubeVideo/" target="_blank">5. 使用 JavaScript 播放器 (Video.js) 播放 YouTube 影片</a><br>
+        <a href="https://whiteroom4.github.io/Vue.js-Example-TodoList/" target="_blank">6. 使用 Vue 基本語法製作 ToDoList</a><br>
       </div>
       <div class="autobiography">
         <h2>自傳</h2>
@@ -128,7 +128,7 @@
 
 
   <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
-  <script src="https://unpkg.com/swiper/js/swiper.min.js"></script>
+  <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
   <script src="js/all.js"></script>
 </body>
 </html>
