--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         <div class="skills">
           <h3>前端</h3>
           <p>
-            HTML / CSS <br>
+            HTML / CSS ( RWD / Bootstrap )<br>
             JavaScript ( jQuery / ES6 / AJAX / API )<br>
           </p>
         </div>
@@ -105,12 +105,21 @@
       <div class="clearfix"></div>
       <div class="work">
         <h2>作品集</h2>
-        <a href="https://whiteroom4.github.io/Responsive-Resume/" target="_blank">1. 使用 HTML、CSS、jQuery、RWD 製作響應式履歷</a><br>
-        <a href="https://whiteroom4.github.io/Wish-List/" target="_blank">2. 使用 JavaScript 搭配 localStorage 製作願望清單</a><br>
-        <a href="https://whiteroom4.github.io/Kaohsiung-Travel-Website-1/" target="_blank">3. 使用 AJAX / JSONP 串接公開平台資料，並以頁面顯示相關資訊</a><br>
-        <a href="https://whiteroom4.github.io/Practice-AJAX-Post/" target="_blank">4. 進行資料檢核： AJAX post JSON data to Web API 簡易帳號註冊及登入頁面</a><br>
-        <a href="https://whiteroom4.github.io/Video.js-YouTubeVideo/" target="_blank">5. 使用 JavaScript 播放器 (Video.js) 播放 YouTube 影片</a><br>
-        <a href="https://whiteroom4.github.io/Vue.js-Example-TodoList/" target="_blank">6. 使用 Vue 基本語法製作 ToDoList</a><br>
+        <a href="https://whiteroom4.github.io/Responsive-Resume/" target="_blank">
+          1. HTML 、 CSS 、 jQuery 、 RWD 製作響應式履歷
+        </a><br>
+        <a href="https://whiteroom4.github.io/Wish-List/" target="_blank">
+          2. JavaScript 搭配 localStorage 製作願望清單
+        </a><br>
+        <a href="https://whiteroom4.github.io/Kaohsiung-Travel-Website-1/" target="_blank">
+          3. 串接公開平台資料並以頁面顯示(以高雄旅遊資訊為例)
+        </a><br>
+        <a href="https://github.com/WhiteRoom4/Last.fm-API" target="_blank">
+          4. 串接 Last.fm API 製作歌曲排行榜(因 API key 安全性問題，僅提供完成頁面截圖)
+        </a><br>
+        <a href="https://whiteroom4.github.io/Vue.js-Example-TodoList/" target="_blank">
+          5. 使用 Vue 製作 ToDoList
+        </a><br>
       </div>
       <div class="autobiography">
         <h2>自傳</h2>
