--- a/index.html
+++ b/index.html
@@ -120,6 +120,9 @@
         <a href="https://whiteroom4.github.io/Vue.js-Example-TodoList/" target="_blank">
           5. 使用 Vue 製作 ToDoList
         </a><br>
+        <a href="https://whiteroom4.github.io/Taxi/" target="_blank">
+          6. Bootstrap4 製作單頁式計程車行網站
+        </a><br>
       </div>
       <div class="autobiography">
         <h2>自傳</h2>
