--- a/index.html
+++ b/index.html
@@ -41,15 +41,14 @@
         <div class="skills">
           <h3>前端</h3>
           <p>
-            HTML / CSS ( RWD / Bootstrap )<br>
-            JavaScript ( jQuery / ES6 / AJAX / API )<br>
+            HTML 、 CSS ( RWD / Bootstrap ) 、 JavaScript ( jQuery / ES6 / AJAX / API )
           </p>
         </div>
         <div class="skills">
-          <h3>後端</h3>
+          <h3>後端 / 資料庫</h3>
           <p>
             C#<br>
-            MSSQL
+            T-SQL ( MS SQL ) 、 Oracle SQL
           </p>
         </div>
         <div class="skills">
